fix: update autoinstall

--- a/autoinstall.yaml
+++ b/autoinstall.yaml
@@ -1,28 +1,31 @@
 #cloud-config
 autoinstall:
-    version: 1
-    identity:
-        realname: 'Dionatan Simioni'
-        hostname: ubuntu-desktop
-        username: diolinux
-        password: '$y$j9T$uhkxlm8nUQaNu.6rl4k2d.$DIldpYy96OHg8lFjfXfc671BZcGWkPOmaDONGAhGSg3'
-    locale: pt_BR.utf8
-    keyboard:
-        layout: br
-    timezone: "America/Sao_Paulo"   
-    packages:
-        - libreoffice
-        - gimp
-        - git
-        - wget
-    snaps:
-        - name: spotify
-          channel: stable
-          classic: false
-    codecs:
-        install: true
-    drivers:
-        install: true
-    updates: all
-    shutdown: reboot
-
+  version: 1
+  identity:
+    realname: 'Raul Coelho'
+    hostname: ubuntu-desktop
+    username: rpc
+    password: '$y$j9T$AKKR4MdzvNLW6PLy84a7/.$gHQhcrFbP.6klveBfzLk3xeoONhnK.hIjWsIx50mRCD'
+  locale: pt_BR.utf8
+  keyboard:
+    layout: br
+  timezone: 'America/Sao_Paulo'
+  packages:
+    - git
+    - wget
+    - curl
+    - obs-studio
+    - neofetch
+  snaps:
+    - name: spotify
+      channel: stable
+      classic: false
+    - name: postman
+      channel: stable
+      classic: false
+  codecs:
+    install: true
+  drivers:
+    install: true
+  updates: all
+  shutdown: reboot
